# netbox-cable-labels

./: .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  MANIFEST.in  README.md  TEMPLATES.md  pyproject.toml  setup.cfg  setup.py
.devcontainer/: Dockerfile-plugin_dev  devcontainer.json  docker-compose.yml  entrypoint-dev.sh  requirements-dev.txt
.devcontainer/configuration/: configuration.py  plugins.py
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: publish.yml  pytest.yml
auto_cable_label/: __init__.py
netbox_cable_labels/: __init__.py  models.py  signals.py  utils.py
netbox_cable_labels/management/commands/: generate_labels.py
netbox_cable_labels/tests/: test_import.py  test_management_command.py  test_signals.py  test_tia_templates.py  test_utils.py
testing/: configuration.testing.py
